--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "happn-random-activity-generator",
   "description": "generates random activity",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "main": "./lib/index",
   "scripts": {
     "test": "mocha silence.js test"
@@ -16,7 +16,8 @@
     "url": "https://github.com/happner/happn-random-activity-generator.git"
   },
   "dependencies": {
-    "async": "^1.5.2"
+    "async": "^1.5.2",
+    "shortid": "^2.2.4"
   },
   "devDependencies": {
     "chai": "^3.2.0",
@@ -30,8 +31,7 @@
     "karma-mocha-reporter": "^1.1.3",
     "mocha": "*",
     "objective": "0.0.40",
-    "request": "^2.67.0",
-    "shortid": "^2.2.4"
+    "request": "^2.67.0"
   },
   "readmeFilename": "README.md"
 }
